--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,149 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Lateef:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-bg-color: #383838;
+  --primary-text-color: rgb(241, 241, 241);
+  --primary-card-color: #494949;
+  --primary-black: black;
+  --primary-green-view-color: #55E5A4;
+  --primary-home-contact-color: #D3E97A;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+[data-theme='light'] {
+  --primary-bg-color: rgb(241, 241, 241);
+  --primary-text-color: black;
+  --primary-card-color: rgb(241, 241, 241);
+  --primary-black: black;
+  --primary-green-view-color: #55E5A4;
+  --primary-home-contact-color: #D3E97A;
+}
+
+* {
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
+  font-family: "Lateef", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.logo {
+  font-family: "Lateef", serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.shiv,
+.projects,
+h2 {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.home_contact_button {
+  background-color: var(--primary-home-contact-color);
+  color: var(--primary-black);
+}
+
+.view_all {
+  background-color: var(--primary-green-view-color);
+  border-color: var(--primary-black);
+  color: var(--primary-black);
+}
+
+.background_color {
+  background-color: var(--primary-card-color);
+}
+
+.card_border {
+  border-color: var(--primary-text-color);
+}
+
+/* Navbar */
+/* resize nav */
+@media (max-width: 490px) {
+  .navbar {
+    padding-left: 2rem;
+    padding-right: 4rem;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* toggle icon */
+@media (max-width: 700px) {
+  .menu {
+    display: none;
+  }
+
+  .mobile-menu-button {
+    display: block;
+  }
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@media (min-width: 700px) {
+  .menu {
+    display: flex;
   }
+
+  .mobile-menu-button {
+    display: none;
+  }
+}
+
+/* for typing effect */
+.typing-effect {
+  display: inline;
+  border-right: 2px solid black;
+  animation: blink-caret 0.75s step-end infinite;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
+
+/* about section tech scroll effect */
+.tech {
+  width: 100%;
+  overflow: hidden;
+}
+
+.tech_slide {
+  display: flex;
+  animation: 8s slide infinite linear;
+}
+
+.tech_slide:hover {
+  animation-play-state: paused;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.tech img {
+  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+  transition: transform 0.3s;
+}
+
+.tech img:hover {
+  transform: scale(1.1);
 }
